# application-services

./: Cargo.toml
automation/swift-components-docs/: Cargo.toml
automation/symbols-generation/: requirements.txt
components/autofill/: Cargo.toml
components/context_id/: Cargo.toml
components/crashtest/: Cargo.toml
components/example/: Cargo.toml
components/filter_adult/: Cargo.toml
components/fxa-client/: Cargo.toml
components/init_rust_components/: Cargo.toml
components/logins/: Cargo.toml
components/merino/: Cargo.toml
components/nimbus/: Cargo.toml
components/places/: Cargo.toml
components/places/sql/: create_shared_schema.sql
components/push/: Cargo.toml
components/relay/: Cargo.toml
components/relevancy/: Cargo.toml
components/remote_settings/: Cargo.toml
components/search/: Cargo.toml
components/suggest/: Cargo.toml
components/support/error/: Cargo.toml
components/support/error/macros/: Cargo.toml
components/support/error/tests/: Cargo.toml
components/support/find-places-db/: Cargo.toml
components/support/firefox-versioning/: Cargo.toml
components/support/guid/: Cargo.toml
components/support/interrupt/: Cargo.toml
components/support/jwcrypto/: Cargo.toml
components/support/nimbus-cli/: Cargo.toml
components/support/nimbus-fml/: Cargo.toml
components/support/payload/: Cargo.toml
components/support/rand_rccrypto/: Cargo.toml
components/support/rate-limiter/: Cargo.toml
components/support/rc_crypto/: Cargo.toml
components/support/rc_crypto/nss/: Cargo.toml
components/support/rc_crypto/nss/nss_build_common/: Cargo.toml
components/support/rc_crypto/nss/nss_sys/: Cargo.toml
components/support/rc_crypto/nss/systest/: Cargo.toml
components/support/restmail-client/: Cargo.toml
components/support/rust-log-forwarder/: Cargo.toml
components/support/sql/: Cargo.toml
components/support/tracing/: Cargo.toml
components/support/types/: Cargo.toml
components/support/viaduct-reqwest/: Cargo.toml
components/sync15/: Cargo.toml
components/sync_manager/: Cargo.toml
components/tabs/: Cargo.toml
components/viaduct/: Cargo.toml
components/webext-storage/: Cargo.toml
components/webext-storage/ffi/: Cargo.toml
examples/autofill-utils/: Cargo.toml
examples/cli-support/: Cargo.toml
examples/example-cli/: Cargo.toml
examples/fxa-client/: Cargo.toml
examples/merino-cli/: Cargo.toml
examples/places-autocomplete/: Cargo.toml
examples/places-utils/: Cargo.toml
examples/push-livetest/: Cargo.toml
examples/relay-cli/: Cargo.toml
examples/relevancy-cli/: Cargo.toml
examples/remote-settings-cli/: Cargo.toml
examples/suggest-cli/: Cargo.toml
examples/sync-pass/: Cargo.toml
examples/tabs-sync/: Cargo.toml
megazords/cirrus/: Cargo.toml
megazords/full/: Cargo.toml
megazords/ios-rust/: Cargo.toml
megazords/ios-rust/focus/: Cargo.toml
megazords/nimbus-experimenter/: Cargo.toml
testing/separated/places-bench/: Cargo.toml
testing/separated/places-tests/: Cargo.toml
testing/sync-test/: Cargo.toml
tools/: import-app-services-to-central.sh
tools/embedded-uniffi-bindgen/: Cargo.toml
tools/protobuf-gen/: Cargo.toml
tools/start-bindings/: Cargo.toml
tools/uniffi-bindgen-library-mode/: Cargo.toml
