[package]
name = "context_id"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MPL-2.0"

[dependencies]
chrono = "0.4.41"
parking_lot = "0.12.4"
serde = "1.0.221"
serde_json = "1.0.145"
thiserror = "2.0.12"
url = "2.5.4"

[dev-dependencies]
mockito = "1.7.0"

[build-dependencies.uniffi]
version = "0.29.4"
features = [ "build",]

[dependencies.error-support]
path = "../support/error"

[dependencies.lazy_static]
version = "1.5.0"

[dependencies.uniffi]
version = "0.29.4"

[dependencies.uuid]
version = "1.17.0"
features = [ "v4",]

[dependencies.viaduct]
path = "../viaduct"

[dev-dependencies.viaduct-reqwest]
path = "../support/viaduct-reqwest"
