[package]
name = "example-component"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MPL-2.0"

[dependencies]
parking_lot = "0.12.4"
serde_json = "1.0.145"
url = "2.5.4"
thiserror = "2.0.12"

[dev-dependencies]

[dependencies.uniffi]
version = "0.29.4"

[dependencies.error-support]
path = "../support/error"

[dependencies.interrupt-support]
path = "../support/interrupt"

[dependencies.sql-support]
path = "../support/sql"

[dependencies.rusqlite]
version = "0.37.0"
features = [ "bundled",]

[dependencies.viaduct]
path = "../viaduct"

[dependencies.serde]
version = "1.0.221"
features = [ "derive",]
