[[bin]]
name = "import-site-list"
required-features = [ "build-binary",]

[package]
name = "filter_adult"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MPL-2.0"

[dependencies]
base64 = "0.23.2"
md-5 = "0.11.0-rc.0"
regex = "1.11.1"
thiserror = "2.0.12"

[features]
build-binary = [ "clap",]

[dependencies.clap]
version = "4.5.42"
features = [ "derive",]
optional = true

[dependencies.error-support]
path = "../support/error"

[dependencies.uniffi]
version = "0.29.4"
