[package]
name = "fxa-client"
edition = "2024"
rust-version = "1.85.0"
version = "0.1.0"
authors = [ "Edouard Oger <eoger@fastmail.com>",]
license = "MPL-2.0"
exclude = [ "/android", "/ios",]

[dependencies]
base64 = "0.22.1"
hex = "0.4.3"
lazy_static = "1.5.0"
log = "0.4.27"
parking_lot = "0.12.4"
serde_derive = "1.0.221"
serde_json = "1.0.145"
url = "2.5.4"
thiserror = "2.0.12"
anyhow = "1.0.98"

[dev-dependencies]
mockall = "0.13.1"
mockito = "1.7.0"

[features]
default = []
gecko = [ "rc_crypto/gecko",]

[dependencies.rate-limiter]
path = "../support/rate-limiter"

[dependencies.serde]
version = "1.0.221"
features = [ "rc",]

[dependencies.sync15]
path = "../sync15"
default-features = false
features = [ "crypto",]

[dependencies.viaduct]
path = "../viaduct"

[dependencies.jwcrypto]
path = "../support/jwcrypto"

[dependencies.rc_crypto]
path = "../support/rc_crypto"
features = [ "ece", "hawk",]

[dependencies.error-support]
path = "../support/error"

[dependencies.sync-guid]
path = "../support/guid"
features = [ "random",]

[dependencies.uniffi]
version = "0.29.4"

[dependencies.payload-support]
path = "../support/payload"

[dependencies.nss]
path = "../support/rc_crypto/nss"

[build-dependencies.uniffi]
version = "0.29.4"
features = [ "build",]

[dev-dependencies.viaduct-reqwest]
path = "../support/viaduct-reqwest"
