[package]
name = "merino"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
serde_json = "1.0.145"
url = "2.5.4"
thiserror = "2.0.12"

[dependencies.uniffi]
version = "0.29.4"

[dependencies.serde]
version = "1.0.221"
features = [ "derive",]

[dependencies.viaduct]
path = "../viaduct"

[dependencies.error-support]
path = "../support/error"

[build-dependencies.uniffi]
version = "0.29.4"
features = [ "build",]
