[package]
name = "nimbus-sdk"
version = "0.10.0"
authors = [ "The Glean Team <glean-team@mozilla.com>", "The Sync Team <sync-team@mozilla.com>",]
edition = "2024"
rust-version = "1.85.0"
description = "A rapid experiment library"
readme = "README.md"
license = "MPL-2.0"
keywords = [ "experiment", "nimbus",]
exclude = [ "/android", "/ios",]

[lib]
name = "nimbus"

[features]
default = [ "stateful",]
rkv-safe-mode = [ "dep:rkv",]
stateful-uniffi-bindings = []
stateful = [ "rkv-safe-mode", "stateful-uniffi-bindings", "dep:remote_settings", "dep:regex", "dep:firefox-versioning",]

[dependencies]
anyhow = "1.0.98"
serde_derive = "1.0.221"
serde_json = "1.0.145"
thiserror = "2.0.12"
url = "2.5.4"
jexl-eval = "0.3.0"
sha2 = "0.11.0-rc.0"
hex = "0.4.3"
once_cell = "1.21.3"
unicode-segmentation = "1.12.0"
cfg-if = "1.0.1"

[dev-dependencies]
clap = "4.5.42"
tempfile = "3.20.0"
ctor = "0.4.3"

[dependencies.serde]
version = "1.0.221"
features = [ "derive",]

[dependencies.rkv]
version = "0.20.0"
optional = true

[dependencies.uuid]
version = "1.17.0"
features = [ "serde", "v4",]

[dependencies.uniffi]
version = "0.29.4"

[dependencies.chrono]
version = "0.4.41"
features = [ "serde",]

[dependencies.error-support]
path = "../support/error"

[dependencies.remote_settings]
path = "../remote_settings"
optional = true

[dependencies.regex]
version = "1.11.1"
optional = true

[dependencies.firefox-versioning]
path = "../support/firefox-versioning"
optional = true

[build-dependencies.uniffi]
version = "0.29.4"
features = [ "build",]

[dev-dependencies.error-support]
path = "../support/error"
features = [ "testing",]

[dev-dependencies.viaduct-reqwest]
path = "../support/viaduct-reqwest"
