[package]
name = "relay"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
log = "0.4.27"
serde_json = "1.0.145"
thiserror = "2.0.12"
url = "2.5.4"
uniffi = "0.29.4"

[dev-dependencies]
expect-test = "1.5.1"
mockall = "0.13.1"
mockito = "1.7.0"

[dependencies.error-support]
path = "../support/error"

[dependencies.serde]
version = "1.0.221"
features = [ "derive",]

[dependencies.viaduct]
path = "../viaduct"

[dev-dependencies.env_logger]
version = "0.11.8"
default-features = false
features = [ "humantime",]

[dev-dependencies.viaduct-reqwest]
path = "../support/viaduct-reqwest"

[build-dependencies.uniffi]
version = "0.29.4"
features = [ "build",]
