[[bin]]
name = "generate-test-data"

[package]
name = "relevancy"
edition = "2024"
rust-version = "1.85.0"
version = "0.1.0"
license = "MPL-2.0"
exclude = [ "/android", "/ios",]

[dependencies]
anyhow = "1.0.98"
md-5 = "0.11.0-rc.0"
parking_lot = "0.12.4"
rand = "0.9.2"
rand_distr = "0.5.1"
serde_json = "1.0.145"
serde_path_to_error = "0.1.17"
thiserror = "2.0.12"
url = "2.5.4"
base64 = "0.23.2"

[lib]

[dependencies.error-support]
path = "../support/error"

[dependencies.interrupt-support]
path = "../support/interrupt"

[dependencies.sql-support]
path = "../support/sql"

[dependencies.rusqlite]
version = "0.37.0"
features = [ "bundled",]

[dependencies.serde]
version = "1.0.221"
features = [ "derive",]

[dependencies.uniffi]
version = "0.29.4"

[dependencies.remote_settings]
path = "../remote_settings"

[build-dependencies.uniffi]
version = "0.29.4"
features = [ "build",]
