[package]
name = "remote_settings"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = [ "The Android Mobile Team <firefox-android-team@mozilla.com>", "The Glean Team <glean-team@mozilla.com>",]
description = "A Remote Settings client intended for application layer platforms."
license = "MPL-2.0"
exclude = [ "/android", "/ios",]

[features]
default = []
signatures = [ "dep:canonical_json", "dep:rc_crypto",]

[dependencies]
thiserror = "2.0.12"
serde_json = "1.0.145"
parking_lot = "0.12.4"
url = "2.5.4"
camino = "1.1.10"
regex = "1.11.1"
anyhow = "1.0.98"
sha2 = "0.11.0-rc.0"

[dev-dependencies]
expect-test = "1.5.1"
mockall = "0.13.1"
mockito = "1.7.0"

[dependencies.uniffi]
version = "0.29.4"

[dependencies.serde]
version = "1.0.221"
features = [ "derive",]

[dependencies.error-support]
path = "../support/error"

[dependencies.sql-support]
path = "../support/sql"

[dependencies.viaduct]
path = "../viaduct"

[dependencies.rusqlite]
version = "0.37.0"
features = [ "bundled",]

[dependencies.jexl-eval]
version = "0.3.0"

[dependencies.firefox-versioning]
path = "../support/firefox-versioning"

[dependencies.canonical_json]
version = "0.5.0"
optional = true

[dependencies.rc_crypto]
path = "../support/rc_crypto"
optional = true

[build-dependencies.uniffi]
version = "0.29.4"
features = [ "build",]

[dev-dependencies.viaduct-reqwest]
path = "../support/viaduct-reqwest"

[dev-dependencies.serde_json]
version = "1.0.141"
features = [ "preserve_order",]

[dev-dependencies.nss]
path = "../support/rc_crypto/nss"
