[package]
name = "search"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Library for search service related components."
readme = "README.md"
license = "MPL-2.0"
exclude = [ "/ios",]

[dependencies]
parking_lot = "0.12.4"
serde_json = "1.0.145"
thiserror = "2.0.12"

[dev-dependencies]
once_cell = "1.21.3"
mockito = "1.7.0"
pretty_assertions = "1.4.1"

[dependencies.error-support]
path = "../support/error"

[dependencies.remote_settings]
path = "../remote_settings"

[dependencies.serde]
version = "1.0.221"
features = [ "derive",]

[dependencies.uniffi]
version = "0.29.4"

[dependencies.firefox-versioning]
path = "../support/firefox-versioning"

[build-dependencies.uniffi]
version = "0.29.4"
features = [ "build",]

[dev-dependencies.error-support]
path = "../support/error"
features = [ "testing",]

[dev-dependencies.viaduct-reqwest]
path = "../support/viaduct-reqwest"
