[[bench]]
name = "benchmark_all"
harness = false
required-features = [ "benchmark_api",]

[[bin]]
name = "debug_ingestion_sizes"
required-features = [ "benchmark_api",]
bench = false

[package]
name = "suggest"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Manages sponsored and web suggestions for Firefox Suggest"
readme = "README.md"
license = "MPL-2.0"
exclude = [ "/android", "/ios",]

[dependencies]
anyhow = "1.0.98"
rmp-serde = "1.3.0"
chrono = "0.4.41"
extend = "1.2.0"
once_cell = "1.21.3"
parking_lot = "0.12.4"
serde_json = "1.0.145"
thiserror = "2.0.12"
unicase = "2.8.1"
unicode-normalization = "0.1.24"

[dev-dependencies]
criterion = "0.7.0"
expect-test = "1.5.1"
hex = "0.4.3"
itertools = "0.14.0"

[features]
benchmark_api = [ "tempfile", "viaduct-reqwest",]

[lib]
bench = false

[dependencies.interrupt-support]
path = "../support/interrupt"

[dependencies.remote_settings]
path = "../remote_settings"

[dependencies.rusqlite]
version = "0.37.0"
features = [ "functions", "bundled", "load_extension", "collation",]

[dependencies.serde]
version = "1.0.221"
features = [ "derive",]

[dependencies.error-support]
path = "../support/error"

[dependencies.sql-support]
path = "../support/sql"

[dependencies.viaduct]
path = "../viaduct"

[dependencies.viaduct-reqwest]
path = "../support/viaduct-reqwest"
optional = true

[dependencies.tempfile]
version = "3.20.0"
optional = true

[dependencies.uniffi]
version = "0.29.4"

[dependencies.url]
version = "2.5.4"
features = [ "serde",]

[dev-dependencies.error-support]
path = "../support/error"
features = [ "testing",]

[dev-dependencies.rc_crypto]
path = "../support/rc_crypto"

[build-dependencies.uniffi]
version = "0.29.4"
features = [ "build",]
