[package]
name = "sync_manager"
version = "0.1.0"
authors = [ "Sync Team <sync-team@mozilla.com>",]
edition = "2024"
rust-version = "1.85.0"
license = "MPL-2.0"
exclude = [ "/android", "/ios",]

[dependencies]
thiserror = "2.0.12"
anyhow = "1.0.98"
lazy_static = "1.5.0"
url = "2.5.4"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.145"
parking_lot = "0.12.4"

[dependencies.autofill]
path = "../autofill"

[dependencies.sync15]
path = "../sync15"
features = [ "sync-client",]

[dependencies.places]
path = "../places"

[dependencies.logins]
path = "../logins"

[dependencies.tabs]
path = "../tabs"

[dependencies.error-support]
path = "../support/error"

[dependencies.sql-support]
path = "../support/sql"

[dependencies.interrupt-support]
path = "../support/interrupt"

[dependencies.uniffi]
version = "0.29.4"

[build-dependencies.uniffi]
version = "0.29.4"
features = [ "build",]
