[package]
name = "tabs"
edition = "2024"
rust-version = "1.85.0"
version = "0.1.0"
authors = [ "Sync Team <sync-team@mozilla.com>",]
license = "MPL-2.0"
exclude = [ "/android", "/ios",]

[dependencies]
anyhow = "1.0.98"
lazy_static = "1.5.0"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.145"
thiserror = "2.0.12"
url = "2.5.4"

[dev-dependencies]
tempfile = "3.20.0"

[dependencies.error-support]
path = "../support/error"

[dependencies.interrupt-support]
path = "../support/interrupt"

[dependencies.payload-support]
path = "../support/payload"

[dependencies.rusqlite]
version = "0.37.0"
features = [ "bundled", "unlock_notify",]

[dependencies.sql-support]
path = "../support/sql"

[dependencies.sync-guid]
path = "../support/guid"
features = [ "random",]

[dependencies.sync15]
path = "../sync15"
features = [ "sync-engine",]

[dependencies.uniffi]
version = "0.29.4"

[dependencies.types]
path = "../support/types"

[dev-dependencies.error-support]
path = "../support/error"
features = [ "testing",]

[build-dependencies.uniffi]
version = "0.29.4"
features = [ "build",]
