[package]
name = "viaduct"
version = "0.1.0"
authors = [ "Thom Chiovoloni <tchiovoloni@mozilla.com>",]
edition = "2024"
rust-version = "1.85.0"
license = "MPL-2.0"
exclude = [ "/android", "/ios",]

[lib]
crate-type = [ "lib",]

[dependencies]
url = "2.5.4"
serde = "1.0.221"
serde_json = "1.0.145"
once_cell = "1.21.3"
prost = "0.14.1"
ffi-support = "0.4.4"
thiserror = "2.0.12"

[dependencies.error-support]
path = "../support/error"

[dependencies.parking_lot]
version = "0.12.4"
