[package]
name = "merino-cli"
version = "0.1.0"
license = "MPL-2.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

[dependencies]
anyhow = "1.0.98"
serde_json = "1.0.145"

[dependencies.clap]
version = "4.5.41"
features = [ "derive",]

[dependencies.merino]
path = "../../components/merino"

[dependencies.viaduct-reqwest]
path = "../../components/support/viaduct-reqwest"
