[package]
name = "examples-relay-cli"
version = "0.1.0"
license = "MPL-2.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

[dependencies]
anyhow = "1.0.98"
log = "0.4.27"

[dependencies.clap]
version = "4.5.41"
features = [ "derive",]

[dependencies.env_logger]
version = "0.11.8"
default-features = false
features = [ "humantime",]

[dependencies.relay]
path = "../../components/relay"

[dependencies.viaduct-reqwest]
path = "../../components/support/viaduct-reqwest"
